--- a/page20.html
+++ b/page20.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -28,27 +27,27 @@
 </head>
 <body>
   
-  <section id="ext_menu-76" data-rv-view="298">
+  <section id="menu-g4" data-rv-view="293">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="mbri-speed mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
-                        <a class="navbar-caption" href="index.html">fixxface</a>
+                        <a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
+                        <a class="navbar-caption text-black" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">HELP</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7e" data-rv-view="296" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-7e" data-rv-view="286" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -72,7 +71,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box5-7d" data-rv-view="302" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-7d" data-rv-view="290" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -106,7 +105,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-77" data-rv-view="300" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-77" data-rv-view="288" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
