--- a/page48.html
+++ b/page48.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <section id="menu-g4" data-rv-view="32">
+  <section id="menu-g4" data-rv-view="34">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -76,7 +76,19 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-gr" data-rv-view="18" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="buttons1-i3" data-rv-view="18" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="text-xs-center"><a class="btn btn-danger" href="page54.html" target="_blank">✨儀器療程Ｑ＆Ａ✨</a> </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-gr" data-rv-view="20" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -91,7 +103,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-h8" data-rv-view="22" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-h8" data-rv-view="24" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -106,7 +118,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-gs" data-rv-view="24" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-gs" data-rv-view="26" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -121,7 +133,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-gt" data-rv-view="26" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-gt" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -136,7 +148,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-gv" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-gv" data-rv-view="30" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -151,7 +163,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-gu" data-rv-view="30" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="image2-gu" data-rv-view="32" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -166,7 +178,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-he" data-rv-view="34" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-he" data-rv-view="36" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -181,7 +193,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-hf" data-rv-view="36" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-hf" data-rv-view="38" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -196,7 +208,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-hg" data-rv-view="38" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-hg" data-rv-view="40" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -211,7 +223,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-hh" data-rv-view="40" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-hh" data-rv-view="42" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -226,7 +238,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-hi" data-rv-view="42" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-hi" data-rv-view="44" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -241,7 +253,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-parallax-background" id="social-buttons2-h9" data-rv-view="44" style="background-image: url(assets/images/2-1920x1080.png); padding-top: 60px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-parallax-background" id="social-buttons2-h9" data-rv-view="46" style="background-image: url(assets/images/2-1920x1080.png); padding-top: 60px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
@@ -253,7 +265,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fm" data-rv-view="20" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fm" data-rv-view="22" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
