--- a/page51.html
+++ b/page51.html
@@ -68,7 +68,7 @@
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">服 務 項 目&nbsp;<br></h3>
                 <div class="lead">&nbsp;service items<div><br></div></div>
-                <div><a class="btn btn-danger" href="page48.html" target="_blank">超流體奈米美學科技<br>comming soon<br></a> <a class="btn btn-danger" href="page52.html" target="_blank">韓國眉毛塑形<br></a> <a class="btn btn-danger" href="page20.html" target="_blank">角蛋白美睫<br></a> <a class="btn btn-danger" href="menu.html" target="_blank">臉部保養專區<br></a></div>
+                <div><a class="btn btn-danger" href="page48.html" target="_blank">超流體奈米美學科技<br>comming soon<br></a> <a class="btn btn-danger" href="page52.html" target="_blank">韓國眉毛塑形<br></a> <a class="btn btn-danger" href="page20.html" target="_blank">角蛋白美睫<br></a> <a class="btn btn-danger" href="page56.html" target="_blank">臉部保養專區<br></a></div>
             </div>
         </div>
     </div>
