--- a/page22.html
+++ b/page22.html
@@ -32,7 +32,7 @@
   
   <section id="menu-g4" data-rv-view="152">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
