--- a/page31.html
+++ b/page31.html
@@ -63,7 +63,7 @@
 
 <section id="menu-g4" data-rv-view="276">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
