--- a/page32.html
+++ b/page32.html
@@ -31,7 +31,7 @@
   
   <section id="menu-g4" data-rv-view="313">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
