--- a/page44.html
+++ b/page44.html
@@ -65,7 +65,7 @@
 
 <section id="menu-g4" data-rv-view="534">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
