--- a/page47.html
+++ b/page47.html
@@ -30,7 +30,7 @@
   
   <section id="menu-g4" data-rv-view="550">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
