--- a/page52.html
+++ b/page52.html
@@ -31,7 +31,7 @@
   
   <section id="menu-hd" data-rv-view="650">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
