--- a/page53.html
+++ b/page53.html
@@ -29,7 +29,7 @@
   
   <section id="menu-hu" data-rv-view="669">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
