--- a/page56.html
+++ b/page56.html
@@ -37,8 +37,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="fixxface.html" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption text-black" href="fixxfaceskincare.html">fixxface.</a>
+                        <a href="index.html" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
+                        <a class="navbar-caption text-black text-primary" href="index.html">fixxface.</a>
                     </div>
 
                 </div>
